[package]
name = "max6954"
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
description = "Platform-agnostic embedded-hal driver for the Maxim Integrated Max6954 display driver."
keywords = ["max6954", "display", "no_std", "embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
license = "MIT"

[features]
segment7-font = []

[dependencies]
embedded-hal = "1.0.0-alpha.10"
enumflags2 = "0.7"
num_enum = { version = "0.6", default-features = false }

